--- a/index.html
+++ b/index.html
@@ -224,20 +224,26 @@ DM me on Instagram for pricing →
 </div>
 
 <footer>
-© 2026 NOXCRU | ELITE MODE
+© 2026 NOXCRU | ELITE WORKS
 </footer>
 
 <script>
 /* ===== Images ===== */
 const images=[
-{src:"1.png",category:"chrome"},
-{src:"2.png",category:"chrome"},
-{src:"3.png",category:"fire"},
-{src:"4.png",category:"fire"},
-{src:"5.png",category:"ice"},
-{src:"6.png",category:"ice"},
-{src:"7.png",category:"chrome"},
-{src:"8.png",category:"fire"},
+{src:"Picsart_26-02-17_22-11-50-981.png",category:"chrome"},
+{src:"file_000000000eb47209b39708c9d21f9f04.png",category:"chrome"},
+{src:"Picsart_26-02-17_22-05-25-752.png",category:"fire"},
+{src:"Picsart_26-02-17_22-19-12-252.png",category:"fire"},
+{src:"Picsart_26-02-17_22-13-48-212.png",category:"ice"},
+{src:"Picsart_26-02-17_22-24-33-659.png",category:"ice"},
+{src:"file_000000007e647243a5ecf8bb4c290588.png",category:"chrome"},
+{src:"file_0000000097fc71fa8252d7a992fe6cd7.png",category:"chrome"},
+{src:"file_00000000a50c71fa8b393e3d16b350b2.png",category:"ice"},
+{src:"file_00000000a5b87206b96d571906f84d41.png",category:"chrome"},
+{src:"file_00000000ab2071fa84ec9d27e1e6a4f5.png",category:"chrome"},
+{src:"file_00000000c53472098fea9588c184e6ed.png",category:"ice"},
+{src:"file_00000000d93c71fa8b8eb1dfbdf435b5.png",category:"chrome"},
+{src:"file_00000000ea307209a29ae82c194d611d.png",category:"fire"},
 ];
 
 let filtered=[...images];
