--- a/index.html
+++ b/index.html
@@ -39,16 +39,20 @@ animation:neon 2s infinite alternate;
 
 @keyframes neon{
 from{
-text-shadow:0 0 5px #fff,
-0 0 15px #00eaff,
-0 0 30px #00eaff;
+text-shadow:
+0 0 5px #fff,
+0 0 10px #fff,
+0 0 20px #fff;
 }
 to{
-text-shadow:0 0 15px #fff,
-0 0 35px #00eaff,
-0 0 70px #00eaff;
+text-shadow:
+0 0 15px #fff,
+0 0 30px #fff,
+0 0 60px #fff;
 }
 }
+
+
 
 header p{
 margin-top:15px;
@@ -312,7 +316,7 @@ speed:Math.random()*0.5+0.2
 
 function animate(){
 ctx.clearRect(0,0,canvas.width,canvas.height);
-ctx.fillStyle="rgba(0,255,255,0.5)";
+ctx.fillStyle="rgba(255,255,255,0.7)";
 particles.forEach(p=>{
 ctx.beginPath();
 ctx.arc(p.x,p.y,p.size,0,Math.PI*2);
