--- a/index.html
+++ b/index.html
@@ -106,23 +106,34 @@ grid-template-columns:repeat(4,1fr);
 }
 
 .card{
+position:relative;
+width:100%;
+aspect-ratio: 1 / 1; /* Perfect square */
 overflow:hidden;
-border-radius:15px;
-background:rgba(255,255,255,0.05);
-backdrop-filter:blur(8px);
-transition:0.4s;
+border-radius:18px;
+background:#111;
 }
 
 .card img{
 width:100%;
+height:100%;
+object-fit:cover;   /* 🔥 Important */
+object-position:center;
 display:block;
-transition:0.4s;
+transition:0.4s ease;
 }
+
 
 .card:hover img{
 transform:scale(1.08);
 box-shadow:0 0 20px #00eaff;
 }
+ 
+.card:hover img{
+transform:scale(1.08);
+filter:brightness(1.1);
+}
+
 
 /* Pagination */
 .pagination{
